<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.game.GameActivity"
    android:background="?attr/backgroundColor">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gameToolBar"
        android:paddingHorizontal="16dp"
        android:paddingTop="8dp">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/closeGameButton"
            android:contentDescription="@string/close_the_game"
            android:background="@drawable/ic_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/BlueText"
            android:text="@string/playerOne"
            android:layout_gravity="center"
            android:layout_marginHorizontal="48dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/giveUpButton"
            android:contentDescription="@string/give_up"
            android:background="@drawable/ic_give_up"
            android:layout_gravity="end"/>
    </FrameLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/logo_description"/>
        </TableRow>
    </TableLayout>

</FrameLayout>