<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_main"
    android:paddingVertical="16dp"
    android:paddingHorizontal="72dp"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/label"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:textAppearance="@style/GrayText"
        android:text="@string/about"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/newGameButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button"
        android:text="@string/new_game"
        android:paddingHorizontal="8dp"
        android:textAppearance="@style/WhitText"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resumeGameButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textAppearance="@style/BlueText"
        android:text="@string/resume_game"
        android:layout_marginTop="16dp"/>
</LinearLayout>